--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
         run: sbt 'scalafixAll --check'
 
       - shell: bash
-        run: sbt ++${{ matrix.scala }} doc
+        run: sbt ++${{ matrix.scala }} doc unidoc
 
       - name: Check that workflows are up to date
         shell: bash
