--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
         scala: [2.12.12, 2.13.4]
         java: [adopt@1.15, adopt@1.11, adopt@1.8]
+        exclude:
+          - os: windows-latest
+            scala: 2.13.4
+            java: adopt@1.15
     runs-on: ${{ matrix.os }}
     steps:
       - name: Ignore line ending differences in git
