--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,9 @@ jobs:
         run: sbt 'scalafixAll --check'
 
       - shell: bash
+        run: ./check-docs.sh
+
+      - shell: bash
         run: sbt ++${{ matrix.scala }} doc unidoc
 
       - name: Check that workflows are up to date
