--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        scala: [2.12.12, 2.13.4]
+        scala: [2.12.13, 2.13.5]
         java: [adopt@1.15, adopt@1.11, adopt@1.8]
         exclude:
           - os: windows-latest
-            scala: 2.13.4
+            scala: 2.13.5
             java: adopt@1.15
     runs-on: ${{ matrix.os }}
     steps:
@@ -59,6 +59,9 @@ jobs:
 
       - shell: bash
         run: sbt ++${{ matrix.scala }} scalafmtSbtCheck scalafmtCheckAll
+
+      - shell: bash
+        run: sbt ++${{ matrix.scala }} versionSchemeEnforcerCheck
 
       - shell: bash
         run: sbt 'scalafixAll --check'
