--- a/.github/workflows/readme-check.yml
+++ b/.github/workflows/readme-check.yml
@@ -11,9 +11,9 @@ jobs:
     name: README Check
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
-        scala: [2.12.12, 2.13.4]
-        java: [adopt@1.15, adopt@1.11, adopt@1.8]
+        os: [ubuntu-latest]
+        scala: [2.13.4]
+        java: [adopt@1.15]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
