--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,4 +78,4 @@ jobs:
         run: sbt ++${{ matrix.scala }} test
 
       - shell: bash
-        run: 'sbt ++${{ matrix.scala }} test:doc versionPolicyCheck'
+        run: 'sbt ++${{ matrix.scala }} test:doc versionSchemeEnforcerCheck'
