--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,5 +62,4 @@ jobs:
       - name: Build project
         run: sbt ++${{ matrix.scala }} test
 
-      - shell: bash
-        run: 'sbt ++${{ matrix.scala }} test:doc versionSchemeEnforcerCheck '''';project core;++3.0.0;test'''''
+      - run: 'sbt ++${{ matrix.scala }} test:doc versionSchemeEnforcerCheck '''';project core;++3.0.0;test'''''
