--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
 
       - run: sbt 'scalafixAll --check'
 
-      - run: sbt ++${{ matrix.scala }} doc unidoc
+      - run: sbt ++${{ matrix.scala }} doc
 
       - name: Check that workflows are up to date
         run: sbt ++${{ matrix.scala }} githubWorkflowCheck
