--- a/.github/workflows/jabba-info.yaml
+++ b/.github/workflows/jabba-info.yaml
@@ -12,7 +12,7 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  build:
+  jabba-info:
     name: Jabba Info
     strategy:
       matrix:
