--- a/.github/workflows/release-script-test.yaml
+++ b/.github/workflows/release-script-test.yaml
@@ -2,7 +2,7 @@
 # specific version of Scala to run and there is a Scalafmt bug in the
 # latest 3.0.0-RC which prevents it from running on Scala 3.
 
-name: Scalafmt/Scalafix
+name: Release Script Test
 
 on:
   pull_request:
@@ -14,11 +14,13 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  lint:
-    name: Scalafmt/Scalafix
+  release-dry-run:
+    name: Release Script dry run
+    env:
+      DRY_RUN: 1
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
         scala: [2.13.6]
         java: [adopt@1.16]
     runs-on: ${{ matrix.os }}
@@ -45,4 +47,4 @@ jobs:
             ~/Library/Caches/Coursier/v1
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
-      - run: sbt ++${{ matrix.scala }} ';scalafmtCheckAll;scalafix --check'
+      - run: ./release.sh
