--- a/.github/workflows/docs-check.yaml
+++ b/.github/workflows/docs-check.yaml
@@ -30,4 +30,4 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
 
-      - run: ./docs-check.sh
+      - run: sbt ';++3.0.0;docs/mdoc --check
