--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Java and Scala
-        uses: olafurpg/setup-scala@v10
+        uses: olafurpg/setup-scala@v12
         with:
           java-version: ${{ matrix.java }}
 
@@ -48,7 +48,10 @@ jobs:
             ~/Library/Caches/Coursier/v1
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
+      - run: sbt --client '++${{ matrix.scala }}; versionSchemeEnforcerCheck; Test / doc; undeclaredCompileDependenciesTest; unusedCompileDependenciesTest; Test / undeclaredCompileDependenciesTest; Test / unusedCompileDependenciesTest'
+
       - name: Check that workflows are up to date
         run: sbt --client '++${{ matrix.scala }}; githubWorkflowCheck'
 
-      - run: sbt --client '++${{ matrix.scala }}; versionSchemeEnforcerCheck; Test / doc'
+      - name: Build project
+        run: sbt --client '++${{ matrix.scala }}; test'
