Restore Cats And Scalacheck Modules To Core
It was becoming a bit too much to have these a separate modules. This commit restores the cats and scalacheck modules to core.

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "2.7.5"
+version = "3.0.0-RC3"
 
 maxColumn = 120
 
@@ -13,3 +13,4 @@ newlines.source=unfold
 
 # Rewrite Rules #
 rewrite.rules=[SortImports, SortModifiers, PreferCurlyFors]
+runner.dialect = scala3
